[package]
name = "tree-sitter-rgbasm"
description = "RGBDS assembly"
version = "0.1.0"
authors = ["ISSOtm <rgbds@eldred.fr>"]
license = "MPL-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rgbasm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/issotm/tree-sitter-rgbds"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
